Version 1.0-beta2 (changes from aircrack-ng 1.0-beta1) - Released ?? ??? ????:
* airodump-ng: Fixed (WEP) open system and shared key system detection.
* airdriver-ng: Fixed module detection.
* airdecap-ng: Save packets with ICV error in a separate file.
* airolib-ng: Automatically create a database if it does not exist. "init" option is not necessary anymore.
* airdriver-ng: Updated r8187 driver download location.
* Added instructions to compile airolib-ng and using '-r' option in aircrack-ng for cygwin.
* Fixed compilation of aircrack-ng with some gcc versions
* Makefile: supports DESTDIR or destdir parameter.
* manpages: Fixes for whatis

Version 1.0-beta1 (changes from aircrack-ng 0.9.2) - Released 01 October 2007:
* airodump-ng: Added --berlin option (see code for more information).
* airodump-ng: Fixed 100% cpu utilization while channelhopping on rtap interface
* airodump-ng: Fixed frame length < 10bytes bug
* airodump-ng: Added out-of-monitor-mode, channel hop and interface down detection
* airodump-ng: Fixed debian bug #417388: airodump-ng doesn't restore terminal after error
* airodump-ng: Fixed opening the same interface more than once
* airodump-ng: Fixed PWR values for some drivers
* airodump-ng: Fixed airodump sanity check (resulted in showing WPA networks without CIPHER & AUTH)
* airodump-ng: Added "-f" to set the time in ms between hopping channels
* airodump-ng: Added partial 40bit WEP detection
* airodump-ng: Added "--showack" to print statistics about ack/cts and rts frames
* airodump-ng: Added "-h" to hide the known stations in ack statistics
* airodump-ng: Added "-r" to read packets from a pcap file
* aircrack-ng: Added BSSID merge option
* aircrack-ng: Added passive ptw attack (using also IP packets for cracking)
* aircrack-ng: Made ptw attack default, for korek attack use -K
* aircrack-ng: Fixed huge memory usage with ptw attack on hundreds of APs
* aircrack-ng: Added -M paramteter for specifying maximum number of IVs to be read