@@ -1,5 +1,6 @@
 Version 1.0-beta2 (changes from aircrack-ng 1.0-beta1) - Released ?? ??? ????:
 * airodump-ng: Fixed (WEP) open system and shared key system detection.
+* airodump-ng (win): Battery status is now displayed.
 * airdriver-ng: Fixed module detection.
 * airdecap-ng: Save packets with ICV error in a separate file.
 * airolib-ng: Automatically create a database if it does not exist. "init" option is not necessary anymore.
@@ -83,6 +84,7 @@ Version 0.9.2 (changes from aircrack-ng 0.9.1) - Released ?? ??? 2007:
 * aireplay-ng: Now works with rtc_cmos
 * aireplay-ng: Fixed compilation on Fedora Rawhide
 * airodump-ng: Fixed: Wrong information printed in CSV file (PSK for WEP with Shared key instead of SKA).
+* airodump-ng (airpcap): added support for 5Ghz channels.
 * airdecap-ng: Fixed bug in calc_pmk() function causes wrong PMK to be computed
 * airmon-ng: Fixed detection of N770 wireless interface
 * airmon-ng: Fixed Ralink rt73 detection
